<resources>
    <string name="app_name">AppAYNA</string>
    <string name="text_description_app">Sistema de Monitoreo</string>
    <string name="text_title_app">AYNI</string>

    <!--Patient-->
    <string name="button_customer">Paciente</string>

    <!--Doctor-->
    <string name="button_doctor">Medico</string>
    <string name="content_image_doctor">ImageDoctor</string>
    <string name="content_image_logo">ImageLogo</string>
    <string name="content_image_cardio">ImageCardio</string>
    <string name="content_image_customer">ImageCustomer</string>

    <!--Login-->
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_dni">DNI</string>
    <string name="text_description_login">Ingresa tu cuenta para continuar</string>
    <string name="text_missing_email_or_password">Completar todos los campos</string>
    <string name="text_login_error">Usuario o clave incorrecto</string>

    <!--Forgot Password-->
    <string name="text_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="button_get_into">Ingresar</string>
    <string name="title_forgot_password">Olvidé contraseña</string>
    <string name="text_enter_dni">Ingresa Número de DNI</string>
    <string name="text_date">Fecha de Nacimiento</string>
    <string name="button_next">Siguiente</string>
    <string name="button_accept">Aceptar</string>
    <string name="title_change_password">Cambio de contraseña</string>
    <string name="text_current_password">Ingresar contraseña actual</string>
    <string name="text_new_password">Ingresa nueva contraseña</string>
    <string name="text_new_repassword">Ingresar nueva contraseña nuevamente</string>
    <string name="text_type">Tipo</string>


    <!--Defaults-->
    <string name="text_default_empty"> </string>


    <!--NavGraph-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Guardar</string>
    <string name="text_nro_documento">Nro Documento</string>
    <string name="text_name_lastname">Nombres y Apellidos</string>
    <string name="text_name">Nombres</string>
    <string name="text_lastname">Apellidos</string>
    <string name="text_birthday">Fecha de Nacimiento</string>
    <string name="text_age">Edad</string>
    <string name="text_email">Correo electrónico</string>
    <string name="fullname">Fulano Fulano</string>
    <string name="text_date_start">Fecha Inicio</string>
    <string name="text_date_end">Fecha Fin</string>
    <string name="button_search">Buscar</string>
    <string name="title_activity_search_patient">SearchPatientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_edit">Editar</string>
    <string name="button_register">Registrar</string>
    <string name="text_height">Altura (cm)</string>
    <string name="text_weight">Peso (Kg)</string>
    <string name="text_blood">Grupo sanguineo</string>
    <string name="date_start_year">01/01/2022</string>
    <string name="title_activity_medical_consultation_detail">MedicalConsultationDetailActivity
    </string>
    <string name="textview">Textview</string>
    <string name="text_password">Contraseña</string>

    <!--Spinner-->
    <string-array name="spinner_identification">
        <item>DNI</item>
    </string-array>

    <string-array name="spinner_emergency_selection">
        <item>Seleccionar tipo de emergencia</item>
    </string-array>

    <string-array name="spinner_priority_selection">
        <item>Seleccionar tipo de prioridad</item>
    </string-array>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="zero">0</string>


</resources>